Bug 238682 - gwenview doesn't remember width of sidebar
Summary: gwenview doesn't remember width of sidebar
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.0
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 306691 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-24 14:40 UTC by Tanja Schulte
Modified: 2018-04-30 11:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tanja Schulte 2010-05-24 14:40:37 UTC
Version:           2.4 (using KDE 4.4.3) 
OS:                Linux

Gwenview centers the information in the sidebar and blurs the left and right part that doesn't fit. Because I want to read the whole information I drag the sidebar to an according with. But everytime I re-open gwenview the sidebar again is reset to tiny width not showing all information. So I have to adjust the width everytime I open gwenview which is very inconvenient. 

Reproducible: Always



Expected Results:  
Gwenview should remember the width of its sidebar.
Comment 1 Jekyll Wu 2012-01-03 00:36:08 UTC
I can reproduce the reported problem using KDE SC 4.8 RC1.
Comment 2 Jekyll Wu 2012-09-12 17:17:07 UTC
*** Bug 306691 has been marked as a duplicate of this bug. ***
Comment 3 Peter Mühlenpfordt 2018-04-30 11:28:23 UTC
Git commit c7b70617668daed49f0262894bc947a12e8d413a by Peter Mühlenpfordt.
Committed on 30/04/2018 at 11:27.
Pushed by muhlenpfordt into branch 'master'.

Remember width of sidebar

Summary:
If a user moves the central splitter to change the width of the
sidebar Gwenview does not remember this for the next restart.
This patch adds a config entry to store the splitter sizes
analogous to the thumbnailbar config in View Mode.
FIXED-IN: 18.08.0
Depends on D12561

Test Plan:
* Open Gwenview in Browse or View Mode
* Show sidebar if hidden ({key F4})
* Move splitter to resize sidebar
* Quit and restart Gwenview
* Sidebar should have same width as before
* Check default with a clean config file

Reviewers: #gwenview, huoni

Reviewed By: #gwenview, huoni

Subscribers: rkflx, huoni

Differential Revision: https://phabricator.kde.org/D12489

M  +19   -0    app/mainwindow.cpp
M  +3    -0    lib/gwenviewconfig.kcfg

https://commits.kde.org/gwenview/c7b70617668daed49f0262894bc947a12e8d413a