Remember width of sidebar

Summary:
If a user moves the central splitter to change the width of the
sidebar Gwenview does not remember this for the next restart.
This patch adds a config entry to store the splitter sizes
analogous to the thumbnailbar config in View Mode.

BUG: 238682
FIXED-IN: 18.08.0
Depends on D12561

Test Plan:
* Open Gwenview in Browse or View Mode
* Show sidebar if hidden ({key F4})
* Move splitter to resize sidebar
* Quit and restart Gwenview
* Sidebar should have same width as before
* Check default with a clean config file

Reviewers: #gwenview, huoni

Reviewed By: #gwenview, huoni

Subscribers: rkflx, huoni

Differential Revision: https://phabricator.kde.org/D12489